--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ali-oss": "^6.0.2",
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
     "node-sass": "^4.11.0",
