--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
+    "vue-amap": "^0.5.8",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
