--- a/public/travis.yml
+++ b/public/travis.yml
@@ -7,7 +7,7 @@ script: npm run build
 
 deploy:
   provider: pages
-  local_dir: ./build
+  local_dir: ./dist
   skip_cleanup: true
   github_token: $REPO_TOKEN
   keep_history: true
