--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,39 @@
 language: node_js
-node_js:
-  - "10"
-install: yarn
+# nodejs版本
+node_js: 
+    - '6'
 
-script: npm run build
+# Travis-CI Caching
+cache:
+  directories:
+    - node_modules
 
-deploy:
-  provider: pages
-  local_dir: ./dist
-  skip_cleanup: true
-  github_token: $REPO_TOKEN
-  keep_history: true
-  on:
-    branch: master
+
+# S: Build Lifecycle
+install:
+  - npm install
+
+before_script:
+
+# 无其他依赖项所以执行npm run build 构建就行了
+script:
+  - npm run build
+
+after_script:
+  - cd ./dist
+  - git init
+  - git config user.name "${U_NAME}"
+  - git config user.email "${U_EMAIL}"
+  - git add .
+  - git commit -m "Update tools"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:${P_BRANCH}
+# E: Build LifeCycle
+
+#指定分支，只有指定的分支提交时才会运行脚本
+branches:
+  only:
+    - master
+env:
+ global:
+   # 我将其添加到了travis-ci的环境变量中
+   #- GH_REF: github.com/yimogit/metools.git
